# PaperMatch

./: .env.sample  .gitignore  Dockerfile  README.md  app.py  prepare_milvus.py  pyproject.toml  requirements.txt  standalone_embed.sh  update_milvus.sh
backend/: README.md  main.py  schemas.py
frontend/: README.md  about.html  index.html
frontend/scripts/: script.js
frontend/styles/: katex.min.css  style.css
