[project]
name = "papermatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "gradio>=5.35.0",
    "gradio-client>=1.10.4",
    "pymilvus>=2.5.11",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
]
