[project]
name = "papermatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "backoff>=2.2.1",
    "fastapi[standard]>=0.118.0",
    "mixedbread>=0.30.0",
    "pymilvus>=2.6.2",
    "python-dotenv>=1.1.1",
]
